<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">HealthHub</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="navigration_open">Open Navigation drawer</string>
    <string name="navigragtion_close">Close Navigation drawer</string>

    <string name="mapbox_access_token" translatable="false" tools:ignore="UnusedResources">sk.eyJ1Ijoic2hheXliZSIsImEiOiJjbHUxbXNubGswa2s3MnFrMWdybHVsN3psIn0.iSpBbDz4HiwCAd7Q5fFFkw</string>

    <string name="login_failed">"Login failed"</string>
    <string-array name="event_types_array">
        <item>Robbery</item>
        <item>Car Accident</item>
        <item>Natural Disaster</item>
        <item>Bomb Blast</item>
    </string-array>

    <item name="tag_id" type="id" />
    <item name="tag_name" type="id" />
    <item name="tag_cnic" type="id" />
    <item name="tag_address" type="id" />
    <item name="tag_birth" type="id" />
    <item name="tag_gender" type="id" />

    <string-array name="treatmentType">
        <item>General Checkup</item>
        <item>Wellness Visits</item>
        <item>Emergency Treatment</item>
        <item>First Aid</item>
        <item>Regular Monitoring</item>
        <item>Specialist Consultation</item>
        <item>Physical Therapy</item>
    </string-array>

    <string-array name="weather_options">
        <item>Spring</item>
        <item>Summer</item>
        <item>Autumn/Fall</item>
        <item>Winter</item>
    </string-array>
    <string-array name="patient_condition">
        <item>Undetermined</item>
        <item>Good</item>
        <item>Fair</item>
        <item>Serious</item>
        <item>Critical</item>
    </string-array>

    <string-array name="gender">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="head1">
         "Welcome to HealthHub\n"
        "Your Comprehensive Disease Management App\n\n"
    </string>
    <string name="body1">
        "DiseaseGuard is your ultimate companion in navigating the complexities of managing various"
        "health conditions. We understand the challenges and uncertainties that come with living"
        "with a disease, which is why we've created a robust mobile application designed to empower"
        "you with the knowledge, tools, and support needed to effectively manage your health.\n\n"
    </string>
    <string name="head2">
        "Personalized Health Tracking\n\n"
    </string>
    <string name="body2">
        "Take control of your health with our intuitive tracking features. Monitor key health"
        "metrics specific to your condition, such as blood glucose levels, pain levels, symptom"
        "severity, and more. Our customizable tracking tools allow you to record and analyze your"
        "health data over time, enabling you to spot trends, identify triggers, and make informed"
        "decisions about your care.\n\n"
    </string>
    <string name="head3">
        "Seamless Communication with Healthcare Providers\n\n"
    </string>
    <string name="body3">
        "Stay connected with your healthcare team effortlessly through DiseaseGuard. Easily"
        "communicate with your doctors, nurses, and specialists, share health data, and receive"
        "personalized guidance and support. Whether you have questions about your treatment plan,"
        "need to schedule appointments, or require urgent assistance, our platform facilitates"
        "smooth and secure communication for enhanced care coordination.\n\n"
    </string>
    <string name="head4">
        "Actionable Insights for Better Management\n\n"
    </string>
    <string name="body4">
        "DiseaseGuard goes beyond basic tracking to provide actionable insights tailored to your"
        "specific health needs. Our advanced analytics analyze your health data to deliver"
        "personalized recommendations and strategies for managing your condition more effectively."
        "From medication reminders to lifestyle modifications, DiseaseGuard empowers you to take"
        "proactive steps towards better health outcomes.\n\n"
    </string>
    <string name="head5">
        "Community Support and Empowerment\n\n"
    </string>
    <string name="body5">
        "Join a supportive community of individuals who understand the challenges of living with"
        "various diseases. Share experiences, exchange tips and advice, and find encouragement"
        "and inspiration from peers facing similar health journeys. DiseaseGuard fosters a sense"
        "of belonging and empowerment, reminding you that you're not alone in your fight against"
        disease.\n\n"
    </string>
    <string name="head6">
        "Your Health, Our Priority\n\n"
    </string>
    <string name="title_activity_disease">Disease</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>
    <string name="title_activity_discharge">discharge</string>
</resources>